--- a/www/index.html
+++ b/www/index.html
@@ -197,7 +197,7 @@
                     <option value="gastronomique">Gastronomique</option>
                     <option value="nature">Nature</option>
                     <option value="historique">Historique **</option>
-                    <option value="enonomique">Economique **</option>
+                    <option value="economique">Economique **</option>
                     <option value="sport">Sportif **</option>
                     <option value="work">Go to work **</option>
                 </select>
